// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Retrigger should retrigger one job for base revision and one job for new revision 1`] = `
<div
  aria-describedby="notistack-snackbar"
  class="SnackbarContent-root SnackbarItem-contentRoot SnackbarItem-variantInfo SnackbarItem-lessPadding css-hped4j"
  role="alert"
  style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
>
  <div
    class="SnackbarItem-message"
    id="notistack-snackbar"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fuz6rv-MuiSvgIcon-root"
      focusable="false"
      style="font-size: 20px; margin-inline-end: 8px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,
        0 22,12A10,10 0 0,0 12,2Z"
      />
    </svg>
    The retrigger request for the base run has been sent successfully, with ID rEtrRigGERtaSkId.
  </div>
  <div
    class="SnackbarItem-action"
  >
    <a
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-aa1ild-MuiButtonBase-root-MuiButton-root"
      href="https://treeherder.mozilla.org/jobs?repo=mozilla-central&revision=coconut"
      rel="noreferrer"
      tabindex="0"
      target="_blank"
    >
      Open Treeherder
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
    <button
      aria-label="Dismiss"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-16podhg-MuiButtonBase-root-MuiIconButton-root"
      data-testid="alert-close"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fuz6rv-MuiSvgIcon-root"
        data-testid="CloseIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Retrigger should retrigger one job for base revision and one job for new revision 2`] = `
<div
  aria-describedby="notistack-snackbar"
  class="SnackbarContent-root SnackbarItem-contentRoot SnackbarItem-variantInfo SnackbarItem-lessPadding css-hped4j"
  role="alert"
  style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
>
  <div
    class="SnackbarItem-message"
    id="notistack-snackbar"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fuz6rv-MuiSvgIcon-root"
      focusable="false"
      style="font-size: 20px; margin-inline-end: 8px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,
        0 22,12A10,10 0 0,0 12,2Z"
      />
    </svg>
    The retrigger request for the new run has been sent successfully, with ID rEtrRigGERtaSkId.
  </div>
  <div
    class="SnackbarItem-action"
  >
    <a
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-aa1ild-MuiButtonBase-root-MuiButton-root"
      href="https://treeherder.mozilla.org/jobs?repo=mozilla-central&revision=spam"
      rel="noreferrer"
      tabindex="0"
      target="_blank"
    >
      Open Treeherder
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
    <button
      aria-label="Dismiss"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-16podhg-MuiButtonBase-root-MuiIconButton-root"
      data-testid="alert-close"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fuz6rv-MuiSvgIcon-root"
        data-testid="CloseIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
